# prada-id

./: .env.example  Dockerfile  README.md  docker-compose.yml  package-lock.json  pyproject.toml
.cursor/rules/: overview.mdc
app/: __init__.py  main.py  pyproject.toml  requirements.txt
app/api/: deps.py
app/api/endpoints/: classify.py  data_operations.py  model.py  training.py
app/core/: config.py
app/db/: models.py  session.py
app/ml/: base_model.py  classifiers.py  feature_extraction.py  pipeline.py  preprocessing.py
app/ml/ckpts/: features_labels.npz
app/services/: data_service.py  training_service.py
frontend/: .env  package-lock.json  package.json  tsconfig.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: ClassifyImage.tsx  ContributeImage.tsx  ImageUpload.tsx
frontend/src/config/: index.ts
frontend/src/layouts/: MainLayout.tsx
frontend/src/pages/: About.tsx  Classify.tsx  Contact.tsx  Contribute.tsx  Home.tsx  Services.tsx
frontend/src/utils/: api.ts
